fix align width

--- a/src/views/base/cards/AddSpazio.css
+++ b/src/views/base/cards/AddSpazio.css
@@ -1,5 +1,5 @@
 .custom-card {
   border-radius: 20px; /* Rounded borders */
   width: 80%; /* Increase width */
-  marginTop: 10%;
+  margintop: 10%;
 }
